Configure tests dependencies and plugins